# omopetl

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
chorus_cdm_5_4/config/: etl_config.yaml  mappings.yaml  source_schema.yaml  target_schema.yaml  validation.yaml
data/mimiciv_demo/3_subjects/: admissions.csv  diagnoses_icd.csv  microbiologyevents.csv  patients.csv  pharmacy.csv  poe_detail.csv  services.csv
omopetl/: cli.py  logger.py  models.py  pipeline.py  transform.py  utils.py
omopetl/templates/: mappings.yaml
omopetl/templates/demo/config/: etl_config.yaml  mappings.yaml  source_schema.yaml  target_schema.yaml  validation.yaml
omopetl/templates/demo/data/lookups/: icd_to_snomed.csv  voc_concept.csv  voc_concept_ancestor.csv  voc_concept_class.csv  voc_concept_relationship.csv  voc_concept_synonym.csv  voc_domain.csv  voc_drug_strength.csv  voc_relationship.csv  voc_source_to_concept_map.csv  voc_vocabulary.csv
omopetl/templates/demo/data/source/: admissions.csv  chartevents.csv  d_icd_diagnoses.csv  diagnoses_icd.csv  icustays.csv  labevents.csv  microbiologyevents.csv  patients.csv  procedureevents.csv  procedures_icd.csv  services.csv  (+1 more)
omopetl/templates/project/: validation.yaml
omopetl/templates/project/config/: etl_config.yaml  mappings.yaml
tests/: test_multistep.py  test_output.py  test_templates.py  test_transform_aggregate.py  test_transformer.py
tests/data/mimiciv_demo/3_subjects/: drgcodes.csv  emar.csv  emar_detail.csv  labevents.csv  omr.csv  poe.csv  prescriptions.csv  procedures_icd.csv  transfers.csv
